# LambdaQ

./: CMakeLists.txt
examples/: functional_example.cpp
src/: qgate.h  qstate.hpp  qubit.hpp
src/qgate/: qgate_class.hpp  qgate_func.hpp  qgate_vector.hpp
src/qstate/: factory.hpp  qstate.cpp  qstate_composite.hpp  qstate_simple.hpp  qstate_vector.cpp  qstate_vector.hpp
src/qubit/: qubit_bloch.cpp  qubit_bloch.hpp  qubit_coeffs.cpp  qubit_coeffs.hpp  qubit_vector.hpp
src/structs/: bloch_sphere.hpp
src/structs/bloch_sphere/: bsphere_angles.cpp  bsphere_angles.hpp  bsphere_coords.cpp  bsphere_coords.hpp
